@@ -10,7 +10,6 @@ import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
-import jakarta.mail.Session;
 import jakarta.mail.internet.MimeMessage;
 import jakarta.persistence.EntityManager;
 import java.util.concurrent.CountDownLatch;
@@ -22,7 +21,6 @@ import no.einnsyn.apiv3.entities.saksmappe.models.SaksmappeDTO;
 import no.einnsyn.apiv3.tasks.handlers.innsynskrav.InnsynskravScheduler;
 import no.einnsyn.clients.ip.IPSender;
 import no.einnsyn.clients.ip.exceptions.IPConnectionException;
-import org.awaitility.Awaitility;
 import org.json.JSONArray;
 import org.junit.jupiter.api.AfterAll;
 import org.junit.jupiter.api.BeforeAll;
@@ -36,17 +34,18 @@ import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.http.HttpStatus;
 import org.springframework.test.annotation.Commit;
 import org.springframework.test.context.ActiveProfiles;
+import org.springframework.transaction.annotation.Transactional;
 
 @SpringBootTest(
     webEnvironment = WebEnvironment.RANDOM_PORT,
     properties = {"application.innsynskravRetryInterval=1"})
 @ActiveProfiles("test")
-@Commit
 class InnsynskravSchedulerTest extends EinnsynControllerTestBase {
 
   @MockBean IPSender ipSender;
   @Autowired private InnsynskravScheduler innsynskravScheduler;
   @Autowired private EntityManager entityManager;
+  @Autowired private InnsynskravSchedulerTestService innsynskravSchedulerTestService;
 
   private final CountDownLatch waiter = new CountDownLatch(1);
 
@@ -87,15 +86,13 @@ class InnsynskravSchedulerTest extends EinnsynControllerTestBase {
     var innsynskravDelJSON = getInnsynskravDelJSON();
     innsynskravDelJSON.put("journalpost", journalpost.getId());
     innsynskravJSON.put("innsynskravDel", new JSONArray().put(innsynskravDelJSON));
-    System.err.println("------- POST INNSYNSKRAV --------");
     var innsynskravResponse = post("/innsynskrav", innsynskravJSON);
     assertEquals(HttpStatus.CREATED, innsynskravResponse.getStatusCode());
     var innsynskravDTO = gson.fromJson(innsynskravResponse.getBody(), InnsynskravDTO.class);
     assertEquals(1, innsynskravDTO.getInnsynskravDel().size());
-    var innsynskrav = innsynskravRepository.findById(innsynskravDTO.getId()).orElse(null);
 
     // Wait until the user confirmation email is sent
-    Awaitility.await().untilAsserted(() -> verify(javaMailSender, times(1)).createMimeMessage());
+    verify(javaMailSender, times(1)).createMimeMessage();
     resetJavaMailSenderMock();
 
     // Make IPSender fail the first time, then succed the second time
@@ -112,13 +109,10 @@ class InnsynskravSchedulerTest extends EinnsynControllerTestBase {
         .thenReturn("test");
 
     // Verify innsynskrav, and that the innsynskravDel isn't sent
+    var verificationSecret =
+        innsynskravSchedulerTestService.getVerificationSecret(innsynskravDTO.getId());
     innsynskravResponse =
-        put(
-            "/innsynskrav/"
-                + innsynskrav.getId()
-                + "/verify/"
-                + innsynskrav.getVerificationSecret(),
-            null);
+        put("/innsynskrav/" + innsynskravDTO.getId() + "/verify/" + verificationSecret, null);
     assertEquals(HttpStatus.OK, innsynskravResponse.getStatusCode());
     var innsynskravResponseDTO = gson.fromJson(innsynskravResponse.getBody(), InnsynskravDTO.class);
     assertEquals(1, innsynskravResponseDTO.getInnsynskravDel().size());
@@ -126,11 +120,13 @@ class InnsynskravSchedulerTest extends EinnsynControllerTestBase {
     innsynskravResponse =
         getAdmin("/innsynskrav/" + innsynskravResponseDTO.getId() + "?expand[]=innsynskravDel");
     innsynskravResponseDTO = gson.fromJson(innsynskravResponse.getBody(), InnsynskravDTO.class);
-    assertNull(innsynskravResponseDTO.getInnsynskravDel().get(0).getExpandedObject().getSent());
+    assertNull(
+        innsynskravResponseDTO.getInnsynskravDel().get(0).getExpandedObject().getSent(),
+        "InnsynskravDel should not be sent");
     assertEquals(true, innsynskravResponseDTO.getVerified());
 
     // Wait until the user confirmation email is sent
-    Awaitility.await().untilAsserted(() -> verify(javaMailSender, times(1)).createMimeMessage());
+    verify(javaMailSender, times(1)).createMimeMessage();
     resetJavaMailSenderMock();
 
     // The first one should be triggered autmatically, and should fail
@@ -147,9 +143,8 @@ class InnsynskravSchedulerTest extends EinnsynControllerTestBase {
             any(String.class),
             any(String.class),
             any(Integer.class));
-    entityManager.refresh(innsynskrav);
     // The first innsynskravDel should not be sent
-    assertNull(innsynskrav.getInnsynskravDel().getFirst().getSent());
+    innsynskravSchedulerTestService.assertNotSent(innsynskravDTO.getId());
 
     // The second one should succeed
     innsynskravScheduler.sendUnsentInnsynskrav();
@@ -166,9 +161,8 @@ class InnsynskravSchedulerTest extends EinnsynControllerTestBase {
             any(String.class),
             any(String.class),
             any(Integer.class));
-    entityManager.refresh(innsynskrav);
-    // The second innsynskravDel should be sent
-    assertNotNull(innsynskrav.getInnsynskravDel().getFirst().getSent());
+    // The innsynskravDel should be sent
+    innsynskravSchedulerTestService.assertSent(innsynskravDTO.getId());
 
     // Wait one more interval, there should be no more calls to IPSender
     innsynskravScheduler.sendUnsentInnsynskrav();
@@ -214,9 +208,12 @@ class InnsynskravSchedulerTest extends EinnsynControllerTestBase {
     innsynskravJSON.put("innsynskravDel", new JSONArray().put(innsynskravDelJSON));
     var innsynskravResponse = post("/innsynskrav", innsynskravJSON);
     assertEquals(HttpStatus.CREATED, innsynskravResponse.getStatusCode());
-    var innsynskravResponseDTO = gson.fromJson(innsynskravResponse.getBody(), InnsynskravDTO.class);
-    assertEquals(1, innsynskravResponseDTO.getInnsynskravDel().size());
-    var innsynskrav = innsynskravRepository.findById(innsynskravResponseDTO.getId()).orElse(null);
+    var innsynskravDTO = gson.fromJson(innsynskravResponse.getBody(), InnsynskravDTO.class);
+    assertEquals(1, innsynskravDTO.getInnsynskravDel().size());
+
+    // Wait until the user confirmation email is sent
+    verify(javaMailSender, times(1)).createMimeMessage();
+    resetJavaMailSenderMock();
 
     // Make IPSender always fail
     when(ipSender.sendInnsynskrav(
@@ -231,34 +228,25 @@ class InnsynskravSchedulerTest extends EinnsynControllerTestBase {
         .thenThrow(new IPConnectionException("", null));
 
     // Verify innsynskrav, and that the innsynskravDel isn't sent
+    var verificationSecret =
+        innsynskravSchedulerTestService.getVerificationSecret(innsynskravDTO.getId());
     innsynskravResponse =
-        put(
-            "/innsynskrav/"
-                + innsynskrav.getId()
-                + "/verify/"
-                + innsynskrav.getVerificationSecret(),
-            null);
+        put("/innsynskrav/" + innsynskravDTO.getId() + "/verify/" + verificationSecret, null);
     assertEquals(HttpStatus.OK, innsynskravResponse.getStatusCode());
-    innsynskravResponseDTO = gson.fromJson(innsynskravResponse.getBody(), InnsynskravDTO.class);
-    assertEquals(1, innsynskravResponseDTO.getInnsynskravDel().size());
+    innsynskravDTO = gson.fromJson(innsynskravResponse.getBody(), InnsynskravDTO.class);
+    assertEquals(1, innsynskravDTO.getInnsynskravDel().size());
+    innsynskravSchedulerTestService.assertNotSent(innsynskravDTO.getId());
 
-    innsynskravResponse =
-        getAdmin("/innsynskrav/" + innsynskravResponseDTO.getId() + "?expand[]=innsynskravDel");
-    innsynskravResponseDTO = gson.fromJson(innsynskravResponse.getBody(), InnsynskravDTO.class);
-    assertNull(innsynskravResponseDTO.getInnsynskravDel().get(0).getExpandedObject().getSent());
-    assertEquals(true, innsynskravResponseDTO.getVerified());
+    // Wait until the user confirmation email is sent
+    verify(javaMailSender, times(1)).createMimeMessage();
+    resetJavaMailSenderMock();
 
-    verify(javaMailSender, times(0)).createMimeMessage();
-
-    // Wait for scheduler to run, there should be one more email sent and three (failed) calls to
+    // There should be one more email sent and three (failed) calls to
     // IPSender
-    innsynskravScheduler.sendUnsentInnsynskrav(); // eFormidling try #1
     innsynskravScheduler.sendUnsentInnsynskrav(); // eFormidling try #2
     innsynskravScheduler.sendUnsentInnsynskrav(); // eFormidling try #3
     innsynskravScheduler.sendUnsentInnsynskrav(); // email fallback
-    innsynskravScheduler.sendUnsentInnsynskrav();
-    verify(javaMailSender, times(3)).createMimeMessage();
-    verify(javaMailSender, times(3)).send(any(MimeMessage.class));
+    verify(javaMailSender, times(1)).createMimeMessage();
     verify(ipSender, atLeast(3))
         .sendInnsynskrav(
             any(String.class),
@@ -271,15 +259,10 @@ class InnsynskravSchedulerTest extends EinnsynControllerTestBase {
             any(Integer.class));
 
     // Verify that the innsynskrav was sent
-    var innsynskravResponse4 =
-        getAdmin("/innsynskrav/" + innsynskravResponseDTO.getId() + "?expand[]=innsynskravDel");
-    assertEquals(HttpStatus.OK, innsynskravResponse4.getStatusCode());
-    var innsynskrav4 = gson.fromJson(innsynskravResponse4.getBody(), InnsynskravDTO.class);
-    assertEquals(1, innsynskrav4.getInnsynskravDel().size());
-    assertNotNull(innsynskrav4.getInnsynskravDel().get(0).getExpandedObject().getSent());
+    innsynskravSchedulerTestService.assertSent(innsynskravDTO.getId());
 
     // Delete innsynskrav
-    var innsynskravResponse5 = deleteAdmin("/innsynskrav/" + innsynskravResponseDTO.getId());
+    var innsynskravResponse5 = deleteAdmin("/innsynskrav/" + innsynskravDTO.getId());
     assertEquals(HttpStatus.OK, innsynskravResponse5.getStatusCode());
 
     // Delete saksmappe
@@ -287,10 +270,8 @@ class InnsynskravSchedulerTest extends EinnsynControllerTestBase {
   }
 
   @Test
+  @Transactional
   void testOneFailingAndOneWorkingInnsynskravSending() throws Exception {
-    var mimeMessage = new MimeMessage((Session) null);
-    when(javaMailSender.createMimeMessage()).thenReturn(mimeMessage);
-
     // Insert Saksmappe
     var saksmappeJSON = getSaksmappeJSON();
     var saksmappeResponse = post("/arkiv/" + arkivDTO.getId() + "/saksmappe", saksmappeJSON);
@@ -323,6 +304,9 @@ class InnsynskravSchedulerTest extends EinnsynControllerTestBase {
     var innsynskravResponseDTO = gson.fromJson(innsynskravResponse.getBody(), InnsynskravDTO.class);
     assertEquals(2, innsynskravResponseDTO.getInnsynskravDel().size());
     var innsynskrav = innsynskravRepository.findById(innsynskravResponseDTO.getId()).orElse(null);
+
+    verify(javaMailSender, times(1)).createMimeMessage();
+    resetJavaMailSenderMock();
 
     // Make IPSender fail on journalenhet2, only once
     var journalenhet2 = enhetRepository.findById(journalenhet2Id).orElse(null);
@@ -363,29 +347,21 @@ class InnsynskravSchedulerTest extends EinnsynControllerTestBase {
     innsynskravResponseDTO = gson.fromJson(innsynskravResponse.getBody(), InnsynskravDTO.class);
     assertEquals(2, innsynskravResponseDTO.getInnsynskravDel().size());
 
-    var innsynskravId = innsynskravResponseDTO.getId();
-    Awaitility.await()
-        .untilAsserted(
-            () -> {
-              var iresponse =
-                  getAdmin("/innsynskrav/" + innsynskravId + "?expand[]=innsynskravDel");
-              var iDTO = gson.fromJson(iresponse.getBody(), InnsynskravDTO.class);
-              for (var innsynskravDel : iDTO.getInnsynskravDel()) {
-                if (innsynskravDel
-                    .getExpandedObject()
-                    .getEnhet()
-                    .getId()
-                    .equals(journalenhet2.getId())) {
-                  assertNull(innsynskravDel.getExpandedObject().getSent());
-                } else {
-                  assertNotNull(innsynskravDel.getExpandedObject().getSent());
-                }
-              }
-              assertEquals(true, iDTO.getVerified());
-            });
+    entityManager.refresh(innsynskrav);
+    var innsynskravDelList = innsynskrav.getInnsynskravDel();
+    for (var innsynskravDel : innsynskravDelList) {
+      if (innsynskravDel.getEnhet().getId().equals(journalenhet2.getId())) {
+        assertNull(innsynskravDel.getSent(), "InnsynskravDel should not be sent");
+      } else {
+        assertNotNull(innsynskravDel.getSent(), "InnsynskravDel should be sent");
+      }
+    }
 
-    // Verify that two emails were sent, and there were one call to IPSender for each
-    // journalenhet
+    // Verify that the order confirmation email is sent
+    verify(javaMailSender, times(1)).createMimeMessage();
+    resetJavaMailSenderMock();
+
+    // Verify that IPSender is called once for each innsynskravDel
     verify(ipSender, times(1))
         .sendInnsynskrav(
             any(String.class),
@@ -409,9 +385,7 @@ class InnsynskravSchedulerTest extends EinnsynControllerTestBase {
 
     // Run scheduler, there should be one more call to IPSender
     innsynskravScheduler.sendUnsentInnsynskrav();
-    verify(javaMailSender, times(2)).createMimeMessage();
-    verify(javaMailSender, times(2)).send(mimeMessage);
-    verify(ipSender, atLeast(1))
+    verify(ipSender, times(1))
         .sendInnsynskrav(
             any(String.class),
             any(String.class),
@@ -421,7 +395,7 @@ class InnsynskravSchedulerTest extends EinnsynControllerTestBase {
             any(String.class),
             any(String.class),
             any(Integer.class));
-    verify(ipSender, atLeast(2))
+    verify(ipSender, times(2))
         .sendInnsynskrav(
             any(String.class),
             any(String.class),
@@ -432,14 +406,14 @@ class InnsynskravSchedulerTest extends EinnsynControllerTestBase {
             any(String.class),
             any(Integer.class));
 
+    // No more emails should be sent
+    verify(javaMailSender, times(0)).createMimeMessage();
+
     // Verify that the last innsynskravDel is sent
-    var innsynskravResponse3 =
-        getAdmin("/innsynskrav/" + innsynskravResponseDTO.getId() + "?expand[]=innsynskravDel");
-    assertEquals(HttpStatus.OK, innsynskravResponse3.getStatusCode());
-    var innsynskrav3 = gson.fromJson(innsynskravResponse3.getBody(), InnsynskravDTO.class);
-    assertEquals(2, innsynskrav3.getInnsynskravDel().size());
-    assertNotNull(innsynskrav3.getInnsynskravDel().get(0).getExpandedObject().getSent());
-    assertNotNull(innsynskrav3.getInnsynskravDel().get(1).getExpandedObject().getSent());
+    entityManager.refresh(innsynskrav);
+    assertEquals(2, innsynskrav.getInnsynskravDel().size());
+    assertNotNull(innsynskrav.getInnsynskravDel().getFirst().getSent());
+    assertNotNull(innsynskrav.getInnsynskravDel().getLast().getSent());
 
     // Delete innsynskrav
     var innsynskravResponse4 = deleteAdmin("/innsynskrav/" + innsynskravResponseDTO.getId());
@@ -448,5 +422,12 @@ class InnsynskravSchedulerTest extends EinnsynControllerTestBase {
     // Delete saksmappe
     var deleteResponse = deleteAdmin("/saksmappe/" + saksmappeDTO.getId());
     assertEquals(HttpStatus.OK, deleteResponse.getStatusCode());
+  }
+
+  private void assertNotSent(String innsynskravId) throws Exception {
+    var innsynskrav = innsynskravRepository.findById(innsynskravId).orElse(null);
+    entityManager.refresh(innsynskrav);
+    assertNotNull(innsynskrav, "Innsynskrav not found");
+    assertNull(innsynskrav.getInnsynskravDel().getFirst().getSent(), "Innsynskrav sent");
   }
 }
